package com.taskmanagement.domain;

/**
 * Represents an intermediate level collaborator
 */
public class Intermediate extends Collaborator {

    public Intermediate() {
        super();
    }

    public Intermediate(String name) {
        super(name);
    }
}