package com.taskmanagement.domain;

/**
 * Represents a junior level collaborator
 */
public class Junior extends Collaborator {

    public Junior() {
        super();
    }

    public Junior(String name) {
        super(name);
    }
}