package com.taskmanagement.enums;

/**
 * Enumeration representing the priority levels for tasks
 */
public enum Priority {
    LOW,
    MEDIUM,
    HIGH
}