package com.taskmanagement.enums;

/**
 * Enumeration representing the types of recurrence for tasks
 */
public enum RecurrenceType {
    DAILY,
    WEEKLY,
    MONTHLY,
    WEEK_DAY
}