package com.taskmanagement.enums;

/**
 * Enumeration representing the status of tasks
 */
public enum Status {
    OPEN,
    COMPLETED,
    CANCELLED
}